--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Coffee Shop Landing Page" />
     <meta name="author" content="David Torres" />
     <meta name="description" content="Coffee Shop Landing Page" />
-    <meta name="Keywords" content="HTML,CSS" />
+    <meta name="keywords" content="HTML,CSS" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
