--- a/index.html
+++ b/index.html
@@ -153,8 +153,16 @@
             </fieldset>
             <button class="form__button">Book a table</button>
 
-            <label for="" class="form__label form__label_type_checkbox">
-              <input class="form__checkbox" type="checkbox" required />
+            <label
+              for="checkbox-input"
+              class="form__label form__label_type_checkbox"
+            >
+              <input
+                class="form__checkbox"
+                id="checkbox-input"
+                type="checkbox"
+                required
+              />
               I agree with the terms of use
             </label>
           </form>
